News:
The 0.4 release solve some problems and implement the webguiless usage.
The 0.3 release is the first version of the new implementation.

The old release, 0.1 and 0.2, uses iptables and ulogd stuff.

If you are interested in the history of this software:

http://www.delirandom.net/20070414/sniffjoke-release-02/
http://www.s0ftpj.org/projects/innova/
