@@ -1,5 +1,9 @@
 News:
 The 0.4 release solve some problems and implement the webguiless usage.
+	implement the plugins support
+	implement the ttl caching 
+	a better gui management and port selection
+
 The 0.3 release is the first version of the new implementation.
 
 The old release, 0.1 and 0.2, uses iptables and ulogd stuff.
